platform/argocd/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - argocd.nerv.local
      secretName: argocd-tls

  rules:
    - host: argocd.nerv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
